@@ -21,30 +21,31 @@ netMap['us-west-2b'] = 'subnet-0c0b7f0b15c1d68be'
 netMap['us-west-2c'] = 'subnet-024be5829372c4f38'
 
 imageMap = [:]
-imageMap['us-west-2a.docker']            = 'ami-0f9f005c313373218'
-imageMap['us-west-2a.docker-32gb']       = 'ami-0f9f005c313373218'
+imageMap['us-west-2a.docker']            = 'ami-0f3b366cff2e46862'
+imageMap['us-west-2a.docker-32gb']       = 'ami-0f3b366cff2e46862'
 imageMap['us-west-2a.docker-32gb-hirsute']  = 'ami-0cbdf6c0f39fd3950'
-imageMap['us-west-2a.docker-32gb-jammy']    = 'ami-0ee8244746ec5d6d4'
-imageMap['us-west-2a.docker-32gb-focal']    = 'ami-0ebe6e463e9912d81'
-imageMap['us-west-2a.docker-32gb-bullseye'] = 'ami-0d0f7602aa5c2425d'
-imageMap['us-west-2a.docker2']           = 'ami-0f9f005c313373218'
-imageMap['us-west-2a.micro-amazon']      = 'ami-0f9f005c313373218'
-imageMap['us-west-2a.min-amazon-2-x64']  = 'ami-0f9f005c313373218'
+imageMap['us-west-2a.docker-32gb-jammy']    = 'ami-04aa685cc800320b3'
+imageMap['us-west-2a.docker-32gb-focal']    = 'ami-0ceeab680f529cc36'
+imageMap['us-west-2a.docker-32gb-bullseye'] = 'ami-0c1b4dff690b5d229'
+imageMap['us-west-2a.docker2']           = 'ami-0f3b366cff2e46862'
+imageMap['us-west-2a.micro-amazon']      = 'ami-0f3b366cff2e46862'
+imageMap['us-west-2a.min-amazon-2-x64']  = 'ami-0f3b366cff2e46862'
 imageMap['us-west-2a.min-centos-8-x64']  = 'ami-0155c31ea13d4abd2'
-imageMap['us-west-2a.min-ol-8-x64']      = 'ami-000b99c02c2b64925'
+imageMap['us-west-2a.min-ol-8-x64']      = 'ami-0c32e4ead7507bc6f'
 imageMap['us-west-2a.min-ol-9-x64']      = 'ami-00a5d5bcea31bb02c'
 imageMap['us-west-2a.min-centos-7-x64']  = 'ami-0686851c4e7b1a8e1'
 imageMap['us-west-2a.fips-centos-7-x64'] = 'ami-036d2cdf95d86d256'
 imageMap['us-west-2a.min-centos-6-x64']  = 'ami-052ff42ae3be02b6a'
-imageMap['us-west-2a.min-buster-x64']    = 'ami-013e2c587714af230'
-imageMap['us-west-2a.min-jammy-x64']     = 'ami-0ee8244746ec5d6d4'
-imageMap['us-west-2a.min-focal-x64']     = 'ami-0892d3c7ee96c0bf7'
-imageMap['us-west-2a.min-bionic-x64']    = 'ami-074251216af698218'
-imageMap['us-west-2a.min-stretch-x64']   = 'ami-01bc069bbdca81d56'
+imageMap['us-west-2a.min-buster-x64']    = 'ami-0164ab05efc075cbc'
+imageMap['us-west-2a.min-jammy-x64']     = 'ami-04aa685cc800320b3'
+imageMap['us-west-2a.min-focal-x64']     = 'ami-0ceeab680f529cc36'
+imageMap['us-west-2a.min-bionic-x64']    = 'ami-0efcd70d6d745b26c'
+imageMap['us-west-2a.min-stretch-x64']   = 'ami-040a022e1b0c8b7f4'
 imageMap['us-west-2a.min-xenial-x64']    = 'ami-079e7a3f57cc8e0d0'
-imageMap['us-west-2a.min-bullseye-x64']  = 'ami-0d0f7602aa5c2425d'
+imageMap['us-west-2a.min-bullseye-x64']  = 'ami-0c1b4dff690b5d229'
+imageMap['us-west-2a.min-bookworm-x64']  = 'ami-0544719b13af6edc3'
 
-imageMap['us-west-2a.docker-32gb-aarch64'] = 'ami-0d3127dab514c6a1a'
+imageMap['us-west-2a.docker-32gb-aarch64'] = 'ami-0f1bcb5bf688257a2'
 
 imageMap['us-west-2b.docker']            = imageMap['us-west-2a.docker']
 imageMap['us-west-2b.docker-32gb']       = imageMap['us-west-2a.docker-32gb']
@@ -68,6 +69,7 @@ imageMap['us-west-2b.min-bionic-x64']    = imageMap['us-west-2a.min-bionic-x64']
 imageMap['us-west-2b.min-stretch-x64']   = imageMap['us-west-2a.min-stretch-x64']
 imageMap['us-west-2b.min-xenial-x64']    = imageMap['us-west-2a.min-xenial-x64']
 imageMap['us-west-2b.min-bullseye-x64']  = imageMap['us-west-2a.min-bullseye-x64']
+imageMap['us-west-2b.min-bookworm-x64']  = imageMap['us-west-2a.min-bookworm-x64']
 
 imageMap['us-west-2b.docker-32gb-aarch64'] = imageMap['us-west-2a.docker-32gb-aarch64']
 
@@ -93,6 +95,7 @@ imageMap['us-west-2c.min-bionic-x64']    = imageMap['us-west-2a.min-bionic-x64']
 imageMap['us-west-2c.min-stretch-x64']   = imageMap['us-west-2a.min-stretch-x64']
 imageMap['us-west-2c.min-xenial-x64']    = imageMap['us-west-2a.min-xenial-x64']
 imageMap['us-west-2c.min-bullseye-x64']  = imageMap['us-west-2a.min-bullseye-x64']
+imageMap['us-west-2c.min-bookworm-x64']  = imageMap['us-west-2a.min-bookworm-x64']
 
 imageMap['us-west-2c.docker-32gb-aarch64'] = imageMap['us-west-2a.docker-32gb-aarch64']
 
@@ -118,21 +121,17 @@ imageMap['us-west-2d.min-bionic-x64']    = imageMap['us-west-2a.min-bionic-x64']
 imageMap['us-west-2d.min-stretch-x64']   = imageMap['us-west-2a.min-stretch-x64']
 imageMap['us-west-2d.min-xenial-x64']    = imageMap['us-west-2a.min-xenial-x64']
 imageMap['us-west-2d.min-bullseye-x64']  = imageMap['us-west-2a.min-bullseye-x64']
+imageMap['us-west-2d.min-bookworm-x64']  = imageMap['us-west-2a.min-bookworm-x64']
 
 imageMap['us-west-2d.docker-32gb-aarch64'] = imageMap['us-west-2a.docker-32gb-aarch64']
 
 priceMap = [:]
-priceMap['t2.medium'] = '0.03'
-priceMap['t2.large'] = '0.07'
-priceMap['m3.2xlarge'] = '0.17'
-priceMap['c5n.2xlarge'] = '0.22'
-priceMap['m5a.2xlarge'] = '0.32' // type=m5a.2xlarge, vCPU=8, memory=32GiB, saving=50%, interruption='<5%', price=0.250600
-priceMap['r6i.4xlarge'] = '0.47'
-priceMap['r5b.2xlarge'] = '0.22'
-priceMap['m5d.xlarge'] = '0.20'
-priceMap['m4.2xlarge'] = '0.25'
+priceMap['t2.medium'] = '0.07'   // type=t2.medium, vCPU=2, memory=4GiB, saving=69%, interruption='<5%', price=0.032000
+priceMap['c5.4xlarge'] = '0.35'  // type=c5.4xlarge, vCPU=16, memory=32GiB, saving=62%, interruption='<5%', price=0.272000
+priceMap['r5a.4xlarge'] = '0.65' // type=r5a.4xlarge, vCPU=16, memory=128GiB, saving=67%, interruption='<5%', price=0.583900
+priceMap['m5d.2xlarge'] = '0.37' // type=m5d.2xlarge, vCPU=8, memory=32GiB, saving=64%, interruption='<5%', price=0.201900
 
-priceMap['r6gd.2xlarge'] = '0.20'
+priceMap['r6gd.2xlarge'] = '0.34'
 
 userMap = [:]
 userMap['docker']            = 'ec2-user'
@@ -157,6 +156,7 @@ userMap['min-ol-9-x64']      = 'ec2-user'
 userMap['min-stretch-x64']   = 'admin'
 userMap['min-buster-x64']    = 'admin'
 userMap['min-bullseye-x64']  = 'admin'
+userMap['min-bookworm-x64']  = 'admin'
 
 userMap['docker-32gb-aarch64'] = 'ec2-user'
 
@@ -185,6 +185,7 @@ modeMap['fips-centos-7-x64'] = modeMap['min-focal-x64']
 modeMap['min-stretch-x64']   = modeMap['min-focal-x64']
 modeMap['min-buster-x64']    = modeMap['min-focal-x64']
 modeMap['min-bullseye-x64']  = modeMap['min-focal-x64']
+modeMap['min-bookworm-x64']  = modeMap['min-focal-x64']
 
 modeMap['docker-32gb-aarch64'] = 'Node.Mode.EXCLUSIVE'
 
@@ -413,9 +414,11 @@ initMap['micro-amazon'] = '''
         sleep 1
         echo try again
     done
+    sudo yum -y remove java-1.8.0-openjdk || :
+    sudo yum -y remove java-1.8.0-openjdk-headless || :
     sudo amazon-linux-extras install epel -y || :
     sudo amazon-linux-extras install java-openjdk11 -y || :
-    sudo yum -y install java-11-openjdk || :
+    sudo yum -y install java-11-openjdk tzdata-java || :
     sudo yum -y install aws-cli || :
     sudo yum -y install git || :
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
@@ -499,7 +502,24 @@ initMap['min-buster-x64'] = '''
         sleep 1
         echo try again
     done
-    sudo DEBIAN_FRONTEND=noninteractive apt-get -y install openjdk-11-jre-headless git
+    until sudo DEBIAN_FRONTEND=noninteractive apt-get install -y lsb-release; do
+        sleep 1
+        echo try again
+    done
+    DEB_VER=$(lsb_release -sc)
+    if [[ ${DEB_VER} == "bookworm" ]]; then
+        JAVA_VER="openjdk-17-jre-headless"
+    else
+        JAVA_VER="openjdk-11-jre-headless"
+    fi
+    if [[ ${DEB_VER} == "bookworm" ]]; then
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER} git
+        sudo mv /etc/ssl /etc/ssl_old
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER}
+        sudo cp -r /etc/ssl_old /etc/ssl
+    else
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER} git
+    fi
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
 '''
 initMap['min-jammy-x64'] = initMap['min-bionic-x64']
@@ -507,42 +527,40 @@ initMap['min-focal-x64'] = initMap['min-bionic-x64']
 initMap['min-stretch-x64'] = initMap['min-bionic-x64']
 initMap['min-xenial-x64'] = initMap['min-bionic-x64']
 initMap['min-bullseye-x64'] = initMap['min-buster-x64']
+initMap['min-bookworm-x64'] = initMap['min-buster-x64']
 
 initMap['docker-32gb-aarch64'] = initMap['docker']
 
 capMap = [:]
-capMap['m3.2xlarge'] = '60'
-capMap['c5n.2xlarge'] = '60'
-capMap['m3.2xlarge'] = '5'
-capMap['m5a.2xlarge'] = '80'
-capMap['r6i.4xlarge'] = '60'
-capMap['m5d.xlarge'] = '60'
-capMap['m4.2xlarge'] = '60'
+capMap['c5.4xlarge'] = '80'
+capMap['r5a.4xlarge'] = '60'
+capMap['m5d.2xlarge'] = '60'
 capMap['r6gd.2xlarge'] = '40'
 
 typeMap = [:]
 typeMap['micro-amazon']      = 't2.medium'
-typeMap['docker']            = 'm4.2xlarge'
-typeMap['docker-32gb']       = 'm5a.2xlarge'
-typeMap['docker-32gb-hirsute']  = 'r6i.4xlarge'
-typeMap['docker-32gb-jammy']    = 'r6i.4xlarge'
-typeMap['docker-32gb-focal']    = 'r6i.4xlarge'
-typeMap['docker-32gb-bullseye'] = 'r6i.4xlarge'
-typeMap['docker2']           = 'r6i.4xlarge'
+typeMap['docker']            = 'm5d.2xlarge'
+typeMap['docker-32gb']       = 'c5.4xlarge'
+typeMap['docker-32gb-hirsute']  = 'r5a.4xlarge'
+typeMap['docker-32gb-jammy']    = 'r5a.4xlarge'
+typeMap['docker-32gb-focal']    = 'r5a.4xlarge'
+typeMap['docker-32gb-bullseye'] = 'r5a.4xlarge'
+typeMap['docker2']           = 'r5a.4xlarge'
 typeMap['min-centos-7-x64']  = typeMap['docker']
 typeMap['min-centos-8-x64']  = typeMap['docker']
 typeMap['min-ol-8-x64']      = typeMap['docker']
 typeMap['min-ol-9-x64']      = typeMap['docker']
 typeMap['fips-centos-7-x64'] = typeMap['docker-32gb']
-typeMap['min-jammy-x64']     = 'r6i.4xlarge'
+typeMap['min-jammy-x64']     = 'r5a.4xlarge'
 typeMap['min-focal-x64']     = typeMap['docker']
 typeMap['min-bionic-x64']    = typeMap['min-centos-7-x64']
 typeMap['min-buster-x64']    = typeMap['min-centos-7-x64']
-typeMap['min-centos-6-x64']  = 'm4.2xlarge'
+typeMap['min-centos-6-x64']  = 'm5d.2xlarge'
 typeMap['min-stretch-x64']   = typeMap['docker']
 typeMap['min-xenial-x64']    = typeMap['docker']
 typeMap['min-amazon-2-x64']  = typeMap['docker']
 typeMap['min-bullseye-x64']  = typeMap['docker']
+typeMap['min-bookworm-x64']  = typeMap['docker']
 
 typeMap['docker-32gb-aarch64'] = 'r6gd.2xlarge'
 
@@ -569,6 +587,7 @@ execMap['min-stretch-x64']   = '1'
 execMap['min-xenial-x64']    = '1'
 execMap['min-buster-x64']    = '1'
 execMap['min-bullseye-x64']  = '1'
+execMap['min-bookworm-x64']  = '1'
 
 execMap['docker-32gb-aarch64'] = '1'
 
@@ -595,6 +614,7 @@ devMap['min-stretch-x64']   = 'xvda=:30:true:gp2,xvdd=:120:true:gp2'
 devMap['min-xenial-x64']    = devMap['min-bionic-x64']
 devMap['min-buster-x64']    = '/dev/xvda=:30:true:gp2,/dev/xvdd=:120:true:gp2'
 devMap['min-bullseye-x64']  = '/dev/xvda=:30:true:gp2,/dev/xvdd=:120:true:gp2'
+devMap['min-bookworm-x64']  = '/dev/xvda=:30:true:gp2,/dev/xvdd=:120:true:gp2'
 
 devMap['docker-32gb-aarch64'] = '/dev/xvda=:8:true:gp2,/dev/xvdd=:120:true:gp2'
 
@@ -621,8 +641,36 @@ labelMap['min-stretch-x64']   = ''
 labelMap['min-xenial-x64']    = ''
 labelMap['min-buster-x64']    = ''
 labelMap['min-bullseye-x64']  = ''
+labelMap['min-bookworm-x64']  = ''
 
 labelMap['docker-32gb-aarch64'] = ''
+
+jvmoptsMap = [:]
+jvmoptsMap['docker']            = '-Xmx512m -Xms512m'
+jvmoptsMap['docker-32gb']       = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-hirsute']  = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-jammy']    = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-focal']    = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-bullseye'] = jvmoptsMap['docker']
+jvmoptsMap['docker2']           = jvmoptsMap['docker']
+jvmoptsMap['micro-amazon']      = jvmoptsMap['docker']
+jvmoptsMap['min-amazon-2-x64']  = jvmoptsMap['docker']
+jvmoptsMap['min-bionic-x64']    = jvmoptsMap['docker']
+jvmoptsMap['min-focal-x64']     = jvmoptsMap['docker']
+jvmoptsMap['min-jammy-x64']     = jvmoptsMap['docker']
+jvmoptsMap['min-centos-6-x64']  = jvmoptsMap['docker']
+jvmoptsMap['min-centos-7-x64']  = jvmoptsMap['docker']
+jvmoptsMap['fips-centos-7-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-centos-8-x64']  = jvmoptsMap['docker']
+jvmoptsMap['min-ol-8-x64']      = jvmoptsMap['docker']
+jvmoptsMap['min-ol-9-x64']      = jvmoptsMap['docker']
+jvmoptsMap['min-stretch-x64']   = jvmoptsMap['docker']
+jvmoptsMap['min-xenial-x64']    = jvmoptsMap['docker']
+jvmoptsMap['min-buster-x64']    = jvmoptsMap['docker']
+jvmoptsMap['min-bullseye-x64']  = jvmoptsMap['docker']
+jvmoptsMap['min-bookworm-x64']  = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+
+jvmoptsMap['docker-32gb-aarch64'] = jvmoptsMap['docker']
 
 // https://github.com/jenkinsci/ec2-plugin/blob/ec2-1.41/src/main/java/hudson/plugins/ec2/SlaveTemplate.java
 SlaveTemplate getTemplate(String OSType, String AZ) {
@@ -643,7 +691,7 @@ SlaveTemplate getTemplate(String OSType, String AZ) {
         execMap[OSType],                            // String numExecutors
         userMap[OSType],                            // String remoteAdmin
         new UnixData('', '', '', '22', ''),         // AMITypeData amiType
-        '-Xmx512m -Xms512m',                        // String jvmopts
+        jvmoptsMap[OSType],                         // String jvmopts
         false,                                      // boolean stopOnTerminate
         netMap[AZ],                                 // String subnetId
         [
@@ -713,6 +761,7 @@ String region = 'us-west-2'
             getTemplate('min-stretch-x64',      "${region}${it}"),
             getTemplate('min-xenial-x64',       "${region}${it}"),
             getTemplate('min-bullseye-x64',     "${region}${it}"),
+            getTemplate('min-bookworm-x64',     "${region}${it}"),
             getTemplate('docker-32gb-aarch64',  "${region}${it}"),
         ],                                       // List<? extends SlaveTemplate> templates 
         '',
